name: leksah-diagrams-hello
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Hamish Mackenzie
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@gmail.com>

executable leksah-diagrams-hello
    if impl(ghcjs)
        build-depends:
            ghcjs-dom,
            diagrams-ghcjs

    main-is: Main.hs
    build-depends:
        base -any,
        diagrams-lib >=1.3.0.5 && <1.4,
        diagrams-svg >=1.3.1.5 && <1.4,
        directory >=1.2.2.0 && <1.3
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans
