name: leksah-diagrams-hello
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) Hamish Mackenzie
maintainer: Hamish Mackenzie <Hamish.K.Mackenzie@gmail.com>

executable leksah-diagrams-hello

    if impl(ghcjs -any)
        build-depends:
            ghcjs-dom -any,
            diagrams-ghcjs -any
        hs-source-dirs: ghcjs
    else
        hs-source-dirs: ghc
    main-is: Main.hs
    build-depends:
        base -any,
        diagrams-lib >=1.3.0.5 && <1.4,
        diagrams-svg >=1.3.1.5 && <1.4,
        directory >=1.2.2.0 && <1.3
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ferror-spans
    other-modules: Render

